# RECODE

./: .gitignore  README.md  coding-course-structure-v1.docx  content sources.md  module1-foundations_of_python_coding.md  module2-git_and_github_for_version_control.md  module3-using_large_language_models_for_coding_assistance.md  module4-packaging_and_distributing_python_projects.md  modulex.md  pyproject.toml  zensical.toml
docs/: index.md
docs/module1-foundations_of_python_coding/: code-quality-and-good-practices.md  control-flow-and-data-structures.md  getting-ready.md  index.md  object-oriented-programming.md  project-organization.md  python-basics.md  study-guide.md  working-with-files-and-data.md
docs/module1-foundations_of_python_coding/module1s1/: README.md  Session1 - Basic examples.ipynb
docs/module1-foundations_of_python_coding/module1s2/: Introduce JupNB interactive examples.ipynb  README.md  Session2 - Core Syntax and Control Flow.ipynb
docs/module1-foundations_of_python_coding/module1s3/: README.md  Session3 - Core Syntax and Control Flow.ipynb
docs/module1-foundations_of_python_coding/module1s7/: session_7.ipynb  (+2 more)
docs/module2-git_and_github_for_version_control/: index.md
docs/module3-using_large_language_models_for_coding_assistance/: index.md
docs/module4-packaging_and_distributing_python_projects/: index.md
module1s1/: RECODE_Introduction.pptx
module1s2/: Introduce JupNB interactive examples.ipynb  README.md  Set up Python+Miniforge+JupyterLab Guide on Windows.md
module1s5/: Plotting and fitting file data to model (optional).ipynb
(+6 files in other folders)
